force-app/main/default/objects/Service__c/fields/Pick_Up_Date_and_Time_Static__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date_and_Time_Static__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Date and Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>