force-app/main/default/objects/Service__c/fields/Pick_Up_Flight_Details__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Flight_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Flight Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>