force-app/main/default/objects/Service__c/fields/Pick_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Time__c</fullName>
    <formula>TEXT(TIMEVALUE(Pick_Up_Date_and_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Up Time</label>
    <type>Text</type>
</CustomField>