force-app/main/default/objects/Service__c/fields/Pre_Register__c.field-meta.xml
<CustomField>
    <fullName>Pre_Register__c</fullName>
    <label>Pre-Register?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>