force-app/main/default/objects/Service__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car Type Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>