force-app/main/default/objects/Service__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>