force-app/main/default/objects/Service__c/fields/PU_Date__c.field-meta.xml
<CustomField>
    <fullName>PU_Date__c</fullName>
    <formula>/*TEXT(DAY(DATEVALUE( Pick_Up_Date_and_Time_Static__c )))+&quot;/&quot; +TEXT(MONTH(DATEVALUE(Pick_Up_Date_and_Time_Static__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Pick_Up_Date_and_Time_Static__c)))*/

MID(Pick_Up_Date_and_Time_Static__c, 1, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PU_Date</label>
    <type>Text</type>
</CustomField>