force-app/main/default/objects/Service__c/fields/PU_Time__c.field-meta.xml
<CustomField>
    <fullName>PU_Time__c</fullName>
    <formula>CASE(
   RIGHT(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 2),
   &quot;AM&quot;, TEXT(VALUE(MID(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 12, 2)) + IF(VALUE(MID(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 12, 2)) = 12, -12, 0)),
   &quot;PM&quot;, TEXT(VALUE(MID(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 12, 2)) + IF(VALUE(MID(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 12, 2)) &lt;&gt; 12, 12, 0)),
   TEXT(VALUE(MID(LEFT(Pick_Up_Date_and_Time_Static__c, 12), 12, 2)))
) &amp; MID(Pick_Up_Date_and_Time_Static__c, 13, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PU_Time</label>
    <type>Text</type>
</CustomField>