force-app/main/default/objects/Service__c/fields/PU_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>PU_Time_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PU Time Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>