force-app/main/default/objects/Service__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <label>Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCDMND</fullName>
            </value>
            <value>
                <fullName>SCPLAT</fullName>
            </value>
            <value>
                <fullName>SCGOLD</fullName>
            </value>
            <value>
                <fullName>SCGOLDP</fullName>
            </value>
            <value>
                <fullName>SCDMND2</fullName>
            </value>
            <value>
                <fullName>SCDMND3</fullName>
            </value>
            <value>
                <fullName>SCDMND4</fullName>
            </value>
            <value>
                <fullName>SCDMND5</fullName>
            </value>
            <value>
                <fullName>SCPLAT2</fullName>
            </value>
            <value>
                <fullName>SCPLAT3</fullName>
            </value>
            <value>
                <fullName>SCPLAT4</fullName>
            </value>
            <value>
                <fullName>SCPLAT5</fullName>
            </value>
            <value>
                <fullName>DIAMOND</fullName>
            </value>
            <value>
                <fullName>PLAT</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>CASNSW</fullName>
            </value>
            <value>
                <fullName>CASATP1</fullName>
            </value>
            <value>
                <fullName>CASQLD</fullName>
            </value>
            <value>
                <fullName>CASCOMP</fullName>
            </value>
            <value>
                <fullName>CASDOM</fullName>
            </value>
            <value>
                <fullName>CASINTL</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>COMPLIM</fullName>
                <isActive>false</isActive>
                <label>COMPLIM</label>
            </value>
            <value>
                <fullName>DIAMONDBB (Breakfast included)</fullName>
                <isActive>false</isActive>
                <label>DIAMONDBB (Breakfast included)</label>
            </value>
            <value>
                <fullName>GOLDBB (Breakfast included)</fullName>
                <isActive>false</isActive>
                <label>GOLDBB (Breakfast included)</label>
            </value>
            <value>
                <fullName>PLATBB (Breakfast Included)</fullName>
                <isActive>false</isActive>
                <label>PLATBB (Breakfast Included)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>