force-app/main/default/objects/Service__c/fields/Restaurant_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Booking_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Restaurant Booking Reference-Admin Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>