force-app/main/default/objects/Service__c/fields/Returning_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Returning_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Returning Date and Time (User Timezone)</label>
    <type>DateTime</type>
</CustomField>