force-app/main/default/objects/Service__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKN - Superior King</fullName>
            </value>
            <value>
                <fullName>STN - Superior Twin</fullName>
            </value>
            <value>
                <fullName>WKP - Accessible King</fullName>
            </value>
            <value>
                <fullName>EKP - Executive King Pyrmont</fullName>
            </value>
            <value>
                <fullName>EKH - Executive King Harbour</fullName>
            </value>
            <value>
                <fullName>PHKN - Harbour King</fullName>
            </value>
            <value>
                <fullName>PHTN - Harbour Twin</fullName>
            </value>
            <value>
                <fullName>PSK - Premium</fullName>
            </value>
            <value>
                <fullName>SSC - Star Suite</fullName>
            </value>
            <value>
                <fullName>SSH - Harbour Star</fullName>
            </value>
            <value>
                <fullName>D1H - Deluxe 1 bedroom</fullName>
            </value>
            <value>
                <fullName>D2H - Deluxe 2 bedroom</fullName>
            </value>
            <value>
                <fullName>RSH - Royale</fullName>
            </value>
            <value>
                <fullName>PSH - Penthouse</fullName>
            </value>
            <value>
                <fullName>1BP - 1 Bedroom Pyrmont</fullName>
            </value>
            <value>
                <fullName>1BC - 1 Bedroom City</fullName>
            </value>
            <value>
                <fullName>1BH - 1 Bedroom Harbour</fullName>
            </value>
            <value>
                <fullName>2BP - 2 Bedroom Pyrmont</fullName>
            </value>
            <value>
                <fullName>2BC - 2 Bedroom City</fullName>
            </value>
            <value>
                <fullName>2BCL - 2 Bedroom Loft</fullName>
            </value>
            <value>
                <fullName>2BH - 2 Bedroom Harbour</fullName>
            </value>
            <value>
                <fullName>2BPE - 2 Bedroom Ent</fullName>
            </value>
            <value>
                <fullName>2BG - 2 Bedroom Gym</fullName>
            </value>
            <value>
                <fullName>3BH - 3 Bedroom Harbour</fullName>
            </value>
            <value>
                <fullName>DRCK - Darling King</fullName>
            </value>
            <value>
                <fullName>DRCT - Darling Twin</fullName>
            </value>
            <value>
                <fullName>WDRL - Accessible King</fullName>
            </value>
            <value>
                <fullName>DRHK - Harbour King</fullName>
            </value>
            <value>
                <fullName>IDHT - Interconnecting</fullName>
            </value>
            <value>
                <fullName>JSUI - Jewel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>