force-app/main/default/objects/Service__c/fields/Same_Rate_Code_for_all_nights__c.field-meta.xml
<CustomField>
    <fullName>Same_Rate_Code_for_all_nights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Rate Code for all nights?</label>
    <type>Checkbox</type>
</CustomField>