force-app/main/default/objects/Service__c/fields/Service_Formula__c.field-meta.xml
<CustomField>
    <fullName>Service_Formula__c</fullName>
    <description>Formula for substitute of Name</description>
    <formula>IF($User.UITheme == &apos;Theme4t&apos;,
    CASE(RecordType.Name,
        &apos;Flight Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;FLIGHT-&apos;),
        &apos;Hotel Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;HOTEL-&apos;),
        &apos;Limo Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;LIMO-&apos;),
        &apos;Restaurant Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;RESTAURANT-&apos;),
        Name
    ),
    HYPERLINK(Id, CASE(RecordType.Name,
        &apos;Flight Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;FLIGHT-&apos;),
        &apos;Hotel Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;HOTEL-&apos;),
        &apos;Limo Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;LIMO-&apos;),
        &apos;Restaurant Booking&apos;, SUBSTITUTE(Name, &apos;S-&apos;, &apos;RESTAURANT-&apos;),
        Name
    ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Service</label>
    <type>Text</type>
</CustomField>