force-app/main/default/objects/Service__c/fields/Signage_Required__c.field-meta.xml
<CustomField>
    <fullName>Signage_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signage Required?</label>
    <type>Checkbox</type>
</CustomField>