force-app/main/default/objects/Service__c/fields/Smoking_Room_Request__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Room_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoking Room Request</label>
    <type>Checkbox</type>
</CustomField>