force-app/main/default/objects/Service__c/fields/SMS_Group__c.field-meta.xml
<CustomField>
    <fullName>SMS_Group__c</fullName>
    <label>SMS Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No SMS</fullName>
            </value>
            <value>
                <fullName>IRB</fullName>
            </value>
            <value>
                <fullName>IPM / Slots</fullName>
            </value>
            <value>
                <fullName>Domestic Non-Rebate</fullName>
            </value>
            <value>
                <fullName>Domestic Rebate</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>