force-app/main/default/objects/Service__c/fields/Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Request__c</fullName>
    <label>Special Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP – International Adaptors</fullName>
            </value>
            <value>
                <fullName>B3 – 2 Water, Shaving Kit, Dental Kit, Slippers</fullName>
            </value>
            <value>
                <fullName>COT – Baby Cot</fullName>
            </value>
            <value>
                <fullName>ROL – Roll away bed</fullName>
            </value>
            <value>
                <fullName>SACRN - Special offer request</fullName>
            </value>
            <value>
                <fullName>SHARE - Allow sharer to check in, approved by management</fullName>
            </value>
            <value>
                <fullName>VVIP Gesture - Check-in Sharer, approved by Paul Monaghan</fullName>
            </value>
            <value>
                <fullName>SHARE - Allow sharer to check in, approved by Paul Monaghan</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>