force-app/main/default/objects/Service__c/fields/Special_Signage_Language__c.field-meta.xml
<CustomField>
    <fullName>Special_Signage_Language__c</fullName>
    <label>Special Signage Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English (AU)</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>