force-app/main/default/objects/Service__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BNE - Black Hide</fullName>
            </value>
            <value>
                <fullName>BNE - Fat Noodle</fullName>
            </value>
            <value>
                <fullName>BNE - Kitchen at Treasury</fullName>
            </value>
            <value>
                <fullName>BNE - Mei Wei</fullName>
            </value>
            <value>
                <fullName>BNE - Ryan’s Lobby Bar</fullName>
            </value>
            <value>
                <fullName>GC - Cucina Vivo</fullName>
            </value>
            <value>
                <fullName>GC - Garden Kitchen &amp; Bar</fullName>
            </value>
            <value>
                <fullName>GC - Harvest</fullName>
            </value>
            <value>
                <fullName>GC - Kiyomi</fullName>
            </value>
            <value>
                <fullName>GC - Nineteen Restaurant</fullName>
            </value>
            <value>
                <fullName>GC - Sovereign Dining</fullName>
            </value>
            <value>
                <fullName>GC - Uncle Su</fullName>
            </value>
            <value>
                <fullName>SYD - Black</fullName>
            </value>
            <value>
                <fullName>SYD - Black Bar</fullName>
            </value>
            <value>
                <fullName>SYD - Cherry Bar</fullName>
            </value>
            <value>
                <fullName>SYD - Cucina Porto</fullName>
            </value>
            <value>
                <fullName>SYD - Fat Noodle</fullName>
            </value>
            <value>
                <fullName>SYD - G&amp;T</fullName>
            </value>
            <value>
                <fullName>SYD - Harvest Buffet</fullName>
            </value>
            <value>
                <fullName>SYD - Sokyo</fullName>
            </value>
            <value>
                <fullName>SYD - Sokyo Bar</fullName>
            </value>
            <value>
                <fullName>SYD - Sovereign Bar</fullName>
            </value>
            <value>
                <fullName>SYD - Sovereign Dining</fullName>
            </value>
            <value>
                <fullName>SYD - The Century</fullName>
            </value>
            <value>
                <fullName>BNE - Bite</fullName>
                <isActive>false</isActive>
                <label>BNE - Bite</label>
            </value>
            <value>
                <fullName>BNE - Fuel Bar</fullName>
                <isActive>false</isActive>
                <label>BNE - Fuel Bar</label>
            </value>
            <value>
                <fullName>BNE - Lab</fullName>
                <isActive>false</isActive>
                <label>BNE - Lab</label>
            </value>
            <value>
                <fullName>BNE - Livewire</fullName>
                <isActive>false</isActive>
                <label>BNE - Livewire</label>
            </value>
            <value>
                <fullName>BNE - Lobby Bar</fullName>
                <isActive>false</isActive>
                <label>BNE - Lobby Bar</label>
            </value>
            <value>
                <fullName>BNE - Orchid</fullName>
                <isActive>false</isActive>
                <label>BNE - Orchid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>