force-app/main/default/objects/Service__c/fields/VIP_Booking__c.field-meta.xml
<CustomField>
    <fullName>VIP_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VIP Booking</label>
    <referenceTo>VIP_Booking__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>