force-app/main/default/objects/Service__c/fields/VIP_Booking_Property__c.field-meta.xml
<CustomField>
    <fullName>VIP_Booking_Property__c</fullName>
    <formula>TEXT(VIP_Booking__r.Property__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Booking Property</label>
    <type>Text</type>
</CustomField>