force-app/main/default/objects/Service__c/fields/VIPB_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>VIPB_Cost_Centre__c</fullName>
    <formula>TEXT(VIP_Booking__r.Cost_Centre__c)</formula>
    <label>VIPB Cost Centre</label>
    <type>Text</type>
</CustomField>