force-app/main/default/objects/Service__c/recordTypes/Flight_Booking.recordType-meta.xml
<RecordType>
    <fullName>Flight_Booking</fullName>
    <active>true</active>
    <label>Flight Booking</label>
</RecordType>