force-app/main/default/objects/Service__c/recordTypes/Hotel_Booking.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Booking</fullName>
    <active>true</active>
    <label>Hotel Booking</label>
</RecordType>