force-app/main/default/objects/Service__c/recordTypes/Limo_Service_Booking.recordType-meta.xml
<RecordType>
    <fullName>Limo_Service_Booking</fullName>
    <active>true</active>
    <label>Limo Booking</label>
</RecordType>