force-app/main/default/objects/Service__c/recordTypes/Restaurant_Booking.recordType-meta.xml
<RecordType>
    <fullName>Restaurant_Booking</fullName>
    <active>true</active>
    <label>Restaurant Booking</label>
</RecordType>