force-app/main/default/objects/Service__c/validationRules/Booking_and_Service_Property_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_and_Service_Property_same</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(VIP_Booking__r.Property__c) != TEXT(Property__c)</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>Property of Booking and Service Should be the same</errorMessage>
</ValidationRule>