force-app/main/default/objects/Service__c/validationRules/Car_Type_Preference_is_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Car_Type_Preference_is_not_editable</fullName>
    <active>false</active>
    <description>Car Type Preference cannot be edited if it already has a value</description>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false,
IF( 
AND( 
 NOT(ISBLANK( Preferences__c )),
 ISCHANGED(Preferences__c )
),
TRUE,
FALSE
))</errorConditionFormula>
    <errorDisplayField>Preferences__c</errorDisplayField>
    <errorMessage>Car Type Preference cannot be edited</errorMessage>
</ValidationRule>