force-app/main/default/objects/Service__c/validationRules/Dietary_Requirements_is_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Dietary_Requirements_is_not_editable</fullName>
    <active>true</active>
    <description>Dietary Requirements is not editable if it already has a value.</description>
    <errorConditionFormula>IF($Permission.Skip_Validations_Permission,
false,
IF(
AND(
NOT(ISBLANK( Dining_Notes__c )),
ISCHANGED( Dining_Notes__c )
),
TRUE,
FALSE
)
)</errorConditionFormula>
    <errorDisplayField>Dietary_Requirements__c</errorDisplayField>
    <errorMessage>Dietary Requirements is not editable</errorMessage>
</ValidationRule>