force-app/main/default/objects/Service__c/validationRules/Hotel_Booking_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_Booking_Status</fullName>
    <active>true</active>
    <errorConditionFormula>/*
RecordType.DeveloperName = &apos;Hotel_Booking&apos; &amp;&amp; ISPICKVAL(Hotel_Booking_Status__c,&apos;Confirmed&apos;) &amp;&amp; ISBLANK(Hotel_Confirmation_Number__c)
*/

IF( $Permission.Skip_Validations_Permission
,false
,RecordType.DeveloperName = &apos;Hotel_Booking&apos; &amp;&amp; ISPICKVAL(Hotel_Booking_Status__c,&apos;Confirmed&apos;) &amp;&amp; ISBLANK(Hotel_Confirmation_Number__c)
)</errorConditionFormula>
    <errorMessage>Status cannot be Confirmed if Hotel Confirmation Number is blank</errorMessage>
</ValidationRule>