force-app/main/default/objects/Service__c/validationRules/Limo_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Limo_Phone_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Validations for Mobile field is:
-No special characters allowed except +
-No alphabetical letters</errorMessage>
</ValidationRule>